[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "big_o_pbeekes"
version = "0.0.1"
authors = [
  { name="Pbeekes", email="Pbeekes@example.com" },
  { name="JPphilips", email="Jpphilips@example.com" }
]
description = "big_O is a Python module to estimate the time complexity of Python code from its execution time. It can be used to analyze how functions scale with inputs of increasing size."
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"