[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "big_o_pbeekes"
version = "0.10.2"
authors = [
  { name="Pietro Berkes", email="pietro.berkes@googlemail.com" },
]
description = "Empirical estimation of time complexity from execution time"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: LICENSE.txt",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pberkes/big_O"
"Bug Tracker" = "https://github.com/pberkes/big_O/issues"